@@ -2,7 +2,7 @@ require 'familia'
 require 'familia/test_objects'
 
 
-@a = Bone.new 'atoken'
+@a = Bone.new 'atoken', 'akey'
 
 ## Familia::Object::String#value should give default value
 @a.msg.value
